unpackaged/main/default/objects/ETT_Customer_PO__c/ETT_Customer_PO__c.object-meta.xml
<CustomObject>
    <label>Customer PO</label>
    <nameField>
        <label>Collection PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PO&#39;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>