unpackaged/main/default/objects/ETT_Customer_PO__c/fields/ETT_Brand__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Customer PO&#39;s</relationshipLabel>
    <relationshipName>Customer_PO_s</relationshipName>
    <type>Lookup</type>
</CustomField>