unpackaged/main/default/objects/ETT_Customer_PO__c/fields/ETT_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipLabel>Customer PO&#39;s</relationshipLabel>
    <relationshipName>Customer_PO_s</relationshipName>
    <type>Lookup</type>
</CustomField>