unpackaged/main/default/objects/ETT_Customer_PO__c/fields/ETT_LPO_Sign_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_LPO_Sign_Person_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>