unpackaged/main/default/objects/ETT_Customer_PO__c/fields/ETT_Pattern_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern Master</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Customer PO&#39;s</relationshipLabel>
    <relationshipName>Customer_PO_s</relationshipName>
    <type>Lookup</type>
</CustomField>