unpackaged/main/default/objects/ETT_Customer_PO__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Customer PO&#39;s</relationshipLabel>
    <relationshipName>Customer_PO_s</relationshipName>
    <type>Lookup</type>
</CustomField>