unpackaged/main/default/objects/ETT_Customer_PO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Account__c</columns>
    <columns>ETT_Collection_PO_Date__c</columns>
    <columns>ETT_Contact__c</columns>
    <columns>ETT_Inspection_Card__c</columns>
    <columns>ETT_Purchase_Price__c</columns>
    <columns>ETT_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>